--- a/customer details.html
+++ b/customer details.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Customer Details </title>
-        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="customer.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     </head>
