--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,7 @@
     <head>
         <title>Home page</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="customer details.html">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     </head>
@@ -16,7 +17,7 @@
             <li class="active"><a href="#"><i class="bi bi-house-fill"></i>Home</a></li>
             <li><a href="#"></a><i class="bi bi-tags"></i>Category</li>
             <li><a href="#"></a><i class="bi bi-boxes"></i>Stock</li>
-            <li><a href="#"></a><i class="bi bi-person-raised-hand"></i>Customer</li>
+            <li><a href="customer details.html"></a><i class="bi bi-person-raised-hand"></i>Customer</li>
             <li><a href="#"><i class="bi bi-clipboard2-plus"></i></i></a>Order Details</li>
             <li><a href="salesdetails.html"><i class="bi bi-graph-up-arrow"></i>Sales</li></a>
             <li><a href="#"></a><i class="bi bi-newspaper"></i>Reports</li>
