--- a/homepage.html
+++ b/homepage.html
@@ -51,7 +51,7 @@
                 <a href="#">Stocks</a>
                 <a href="#">Category</a>
                 <a href="#">Order Details</a>
-                <a href="#">Sales</a>
+                <a href="salesdetails.html">Sales</a>
                 <a href="#">Reports</a>
                 <a href="#">Support</a>
             </div>
