--- a/salesdetails.html
+++ b/salesdetails.html
@@ -16,7 +16,7 @@
             <li class="active"><a href="homepage.html"><i class="bi bi-house-fill"></i>Home</a></li>
             <li><a href="#"></a><i class="bi bi-tags"></i>Category</li>
             <li><a href="#"></a><i class="bi bi-boxes"></i>Stock</li>
-            <li><a href="#"></a><i class="bi bi-person-raised-hand"></i>Customer</li>
+            <li><a href="customer details.html"></a><i class="bi bi-person-raised-hand"></i>Customer</li>
             <li><a href="#"><i class="bi bi-clipboard2-plus"></i></i></a>Order Details</li>
             <li><a href="#"></a><i class="bi bi-graph-up-arrow"></i>Sales</li>
             <li><a href="#"></a><i class="bi bi-newspaper"></i>Reports</li>
