--- a/customer details.html
+++ b/customer details.html
@@ -79,6 +79,13 @@
 
     <input type="Submit" value="Submit" name="Submit" id="Submit">
     <input type="Cancel" value="Cancel" name="Cancel" id="Cancel">
+
+    <h2>Place Order</h2>
+    <form id="register" method="post">
+
+        
+
+
         
 </form>
 </div>
