--- a/customer details.html
+++ b/customer details.html
@@ -41,8 +41,10 @@
 
 </head>
 <body>
-    <div class="main">
-    <div class="register">
+    <div class="container">
+    <div class="div1">
+    
+
         <h2>Customer Details</h2>
         <form id="register" method="post"> 
         
