--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,19 @@
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/footer.css">
        
-      
     </head>
     <body>
+        <!------------------------------Navigation Bar-------------------------------->
         <div class="hero">
              <nav>
                 <!--logo_txt-->
                 <a href="after_login.php"><img class="logo" src="img/logo.png" alt="logo"></a>
             <ul class="nav_links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="donation.php">Category</a></li>
-                <li><a href="blood_bank.php"></a></li>
+                <li><a href="donation.php">Categorys</a></li>
                 <li><a href="contact.php">Contact</a></li>
                 <li><a href="about_us.php">About us</a></li>
-                <li><a href="feedback.php">Feedback</a></li>
+                <li><a href="feedback.php">My Orders</a></li>
             </ul>
             <!--user image-->
                 <img class="user_pic" src="img/user profile icons/user.png" onclick="toggleMenu()">
@@ -68,24 +67,44 @@
                     subMenu.classList.toggle("open-menu");
                 }  
         </script>
+  <!------------------------------Navigation Bar end-------------------------------->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </body>
+     <!------------------------------Footer-------------------------------->
     <footer>
         <div class="container">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email:Info@example.com</p>
-                <p>Phone:+121 56556 565556</p>
-                <p>Address:Your Address 123 street</p>
+                <p>Email:primelanka@gmail.com</p>
+                <p>Phone:+94 11556 5655</p>
+                <p>Address:No 85,Street 2,Colombo 5</p>
             </div>
             <div class="footer-content">
                 <h3>Quick Links</h3>
                  <ul class="list">
                     <li><a style="color:white;" href="">Home</a></li>
-                    <li><a style="color:white;"href="">About</a></li>
-                    <li><a style="color:white;"href="">Services</a></li>
-                    <li><a style="color:white;"href="">Products</a></li>
+                    <li><a style="color:white;"href="">Categorys</a></li>
                     <li><a style="color:white;"href="">Contact</a></li>
+                    <li><a style="color:white;"href="">About Us</a></li>
                  </ul>
             </div>
             <div class="footer-content">
@@ -102,5 +121,5 @@
             <p>&copy; PRIMELANKA_STOCK_MANAGMENT . All rights reserved</p>
         </div>
     </footer>
-
+    <!------------------------------Footer end-------------------------------->
 </html>
