--- a/src/categorys.html
+++ b/src/categorys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>PRIMELANKA_STOCK_MANAGMENT home </title>
         <!--set an icon to browser-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +9,14 @@
         <script src="https://kit.fontawesome.com/1165876da6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/footer.css">
-      
+       
     </head>
     <body>
+        <!------------------------------Navigation Bar-------------------------------->
         <div class="hero">
              <nav>
                 <!--logo_txt-->
-                <a href="after_login.php"><img class="logo" src="img/logo.png" alt="logo"></a>
+                <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
                 <ul class="nav_links">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="categorys.html">Categorys</a></li>
@@ -66,5 +67,59 @@
                     subMenu.classList.toggle("open-menu");
                 }  
         </script>
+  <!------------------------------Navigation Bar end-------------------------------->
+<br><br><br><br><br><br><br><h1>categorys page</h1><br><br><br><br><br><br><br><h1></h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </body>
+     <!------------------------------Footer-------------------------------->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <h3>Contact Us</h3>
+                <p>Email:primelanka@gmail.com</p>
+                <p>Phone:+94 11556 5655</p>
+                <p>Address:No 85,Street 2,Colombo 5</p>
+            </div>
+            <div class="footer-content">
+                <h3>Quick Links</h3>
+                 <ul class="list">
+                    <li><a style="color:white;" href="">Home</a></li>
+                    <li><a style="color:white;"href="">Categorys</a></li>
+                    <li><a style="color:white;"href="">Contact</a></li>
+                    <li><a style="color:white;"href="">About Us</a></li>
+                 </ul>
+            </div>
+            <div class="footer-content">
+                <h3>Follow Us</h3>
+                <ul class="social-icons">
+                 <li><a  href=""><i class="fab fa-facebook"></i></a></li>
+                 <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                 <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                 <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+        </div>
+        <div class="bottom-bar">
+            <p>&copy; PRIMELANKA_STOCK_MANAGMENT . All rights reserved</p>
+        </div>
+    </footer>
+    <!------------------------------Footer end-------------------------------->
 </html>
