--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PRIMELANKA_STOCK_MANAGMENT</title>
+        <title>PRIMELANKA_STOCK_MANAGMENT Index</title>
         <!--set an icon to browser-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,14 +16,14 @@
         <div class="hero">
              <nav>
                 <!--logo_txt-->
-                <a href="after_login.php"><img class="logo" src="img/logo.png" alt="logo"></a>
-            <ul class="nav_links">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="donation.php">Categorys</a></li>
-                <li><a href="contact.php">Contact</a></li>
-                <li><a href="about_us.php">About us</a></li>
-                <li><a href="feedback.php">My Orders</a></li>
-            </ul>
+                <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+                <ul class="nav_links">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="categorys.html">Categorys</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about_us.html">About us</a></li>
+                    <li><a href="my_orders.html">My Orders</a></li>
+                </ul>
             <!--user image-->
                 <img class="user_pic" src="img/user profile icons/user.png" onclick="toggleMenu()">
                 <!--User Profile-->
@@ -68,7 +68,7 @@
                 }  
         </script>
   <!------------------------------Navigation Bar end-------------------------------->
-
+<br><br><br><br><br><br><br><h1>Index page</h1><br><br><br><br><br><br><br><h1></h1>
 
 
 
