--- a/src/footer.html
+++ b/src/footer.html
@@ -20,7 +20,7 @@
                 <h3>Quick Links</h3>
                  <ul class="list">
                     <li><a style="color:white;" href="">Home</a></li>
-                    <li><a style="color:white;"href="">About</a></li>
+                    <li><a style="color:white;"href="">Categories</a></li>
                     <li><a style="color:white;"href="">Services</a></li>
                     <li><a style="color:white;"href="">Products</a></li>
                     <li><a style="color:white;"href="">Contact</a></li>
