--- a/src/header.html
+++ b/src/header.html
@@ -18,7 +18,7 @@
                 <a href="after_login.php"><img class="logo" src="img/logo.png" alt="logo"></a>
                 <ul class="nav_links">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="categorys.html">Categorys</a></li>
+                    <li><a href="categories.html">Categories</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="about_us.html">About us</a></li>
                     <li><a href="my_orders.html">My Orders</a></li>
