--- a/src/categories.html
+++ b/src/categories.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
                 <ul class="nav_links">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="categorys.html">Categorys</a></li>
+                    <li><a href="categories.html">Categories</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="about_us.html">About us</a></li>
                     <li><a href="my_orders.html">My Orders</a></li>
@@ -68,7 +68,7 @@
                 }  
         </script>
   <!------------------------------Navigation Bar end-------------------------------->
-<br><br><br><br><br><br><br><h1>categorys page</h1><br><br><br><br><br><br><br><h1></h1>
+<br><br><br><br><br><br><br><h1>categories page</h1><br><br><br><br><br><br><br><h1></h1>
 
 
 
@@ -102,7 +102,7 @@
                 <h3>Quick Links</h3>
                  <ul class="list">
                     <li><a style="color:white;" href="">Home</a></li>
-                    <li><a style="color:white;"href="">Categorys</a></li>
+                    <li><a style="color:white;"href="">Categories</a></li>
                     <li><a style="color:white;"href="">Contact</a></li>
                     <li><a style="color:white;"href="">About Us</a></li>
                  </ul>
