--- a/src/my_orders.html
+++ b/src/my_orders.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
                 <ul class="nav_links">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="categorys.html">Categorys</a></li>
+                    <li><a href="categories.html">Categories</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="about_us.html">About us</a></li>
                     <li><a href="my_orders.html">My Orders</a></li>
@@ -102,7 +102,7 @@
                 <h3>Quick Links</h3>
                  <ul class="list">
                     <li><a style="color:white;" href="">Home</a></li>
-                    <li><a style="color:white;"href="">Categorys</a></li>
+                    <li><a style="color:white;"href="">Categories</a></li>
                     <li><a style="color:white;"href="">Contact</a></li>
                     <li><a style="color:white;"href="">About Us</a></li>
                  </ul>
