--- a/src/about_us.html
+++ b/src/about_us.html
@@ -31,7 +31,7 @@
                     <div class="sub-menu">
                         <div class="user-info">
                             <img src="img/user profile icons/user.png">
-                            <h3>Chamarea Nuwan</h3>
+                            <h3>Chamara Nuwan</h3>
                         </div>
                         <hr>
                         <a href="edit_profile.php" class="sub-menu-link">
