--- a/src/header.html
+++ b/src/header.html
@@ -21,7 +21,7 @@
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="about_us.html">About us</a></li>
-                    <li><a href="my_orders.html">My Orders</a></li>
+                    <li><a href="my_orders.html">Orders details</a></li>
                 </ul>
             <!--user image-->
                 <img class="user_pic" src="img/user profile icons/user.png" onclick="toggleMenu()">
