--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                             <h3>Chamara Nuwan</h3>
                         </div>
                         <hr>
-                        <a href="edit_profile.php" class="sub-menu-link">
+                        <a href="edit_profile.html" class="sub-menu-link">
                             <img src="img/user profile icons/profile.png">
                             <p>Edit Profile</p>
                             <span>></span>
