--- a/src/home.html
+++ b/src/home.html
@@ -44,7 +44,7 @@
                             <p>Setting & Privacy</p>
                             <span>></span>
                         </a>
-                        <a href="https://www.who.int/campaigns/world-blood-donor-day/2018/who-can-give-blood" target="_blank" class="sub-menu-link">
+                        <a href="" target="_blank" class="sub-menu-link">
                             <img src="img/user profile icons/help.png">
                             <p>Help & Support</p>
                             <span>></span>
