--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,12 @@
                             <p>Edit Profile</p>
                             <span>></span>
                         </a>
-                        <a href="setting_privacy.php" class="sub-menu-link">
+                        <a href="setting_privacy.html" class="sub-menu-link">
                             <img src="img/user profile icons/setting.png">
                             <p>Setting & Privacy</p>
                             <span>></span>
                         </a>
-                        <a href="https://www.who.int/campaigns/world-blood-donor-day/2018/who-can-give-blood" target="_blank" class="sub-menu-link">
+                        <a href="" target="_blank" class="sub-menu-link">
                             <img src="img/user profile icons/help.png">
                             <p>Help & Support</p>
                             <span>></span>
