--- a/src/contact.html
+++ b/src/contact.html
@@ -68,7 +68,7 @@
                 }  
         </script>
   <!------------------------------Navigation Bar end-------------------------------->
-<br><br><br><br><br><br><br><h1>contact page</h1><br><br><br><br><br><br><br><h1></h1>
+<br><br><br><br><br><br><br><h1>DO YOU NEED ANY HELP?</h1>
 
 
 
@@ -77,15 +77,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
+<br><br><br><br><br><br><br><h1></h1>
 
 
     </body>
