--- a/src/contact.html
+++ b/src/contact.html
@@ -9,6 +9,7 @@
         <script src="https://kit.fontawesome.com/1165876da6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/footer.css">
+        <link rel="stylesheet" href="styles/contact.css">
        
     </head>
     <body>
@@ -68,9 +69,30 @@
                 }  
         </script>
   <!------------------------------Navigation Bar end-------------------------------->
-<br><br><br><br><br><br><br><h1>DO YOU NEED ANY HELP?</h1>
+<br><br><br><br><br><br><br>
 
+  <div class="contact-section">
+    <h1>DO YOU NEED ANY HELP?</h1>
+    <h1>Contact Us</h1>
 
+<form class="contact-form">
+    <label>Full name:</label>
+    <input type="text" class="contact-form-text" placeholder="Enter your full name">
+
+    <label>Email:</label>
+    <input type="text" class="contact-form-text" placeholder="Enter your Email">
+
+    <label>Contact number:</label>
+    <input type="text" class="contact-form-text" placeholder="Enter your contact number">
+
+    <label>Message:</label>
+    <textarea class="contact-form-text" placeholder="Enter your message"></textarea>
+    
+    <input type="submit" class="contact-form-btn" value="Send ">
+   
+</form>
+
+  </div>
 
 
 
