--- a/src/categories.html
+++ b/src/categories.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>PRIMELANKA_STOCK_MANAGMENT home </title>
-        <!--set an icon to browser-->
+        <!--set an icon to browser--
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="x-icon" href="img/logo icon 123.png">
