--- a/src/my_orders.html
+++ b/src/my_orders.html
@@ -78,6 +78,9 @@
 <form class="Order-Details"></form>
     <label> Customer Name : </label>
     <input type="text" class="Order-details" name="cname" placeholder="Enter Customer name"><br><br>
+
+    <label> E-mail : </label>
+    <input type="text" class="Order-details" name="cname" placeholder="Enter E-mail"><br><br>
     
 
     <label> Phone Number :</label>
