--- a/src/about_us.html
+++ b/src/about_us.html
@@ -9,6 +9,7 @@
         <script src="https://kit.fontawesome.com/1165876da6.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/footer.css">
+        <link rel="stylesheet" href="styles/about.css">
        
     </head>
     <body>
@@ -57,7 +58,7 @@
                 </div>
                 <!--Login Button-->
                 <a href="login.html"><button class="login_b">LOGIN</button> </a>
-            </nav>
+            </nav><br>
             
     <!--js link-->        
         <script src="js/myscript.js"></script>   
@@ -68,8 +69,35 @@
                 }  
         </script>
   <!------------------------------Navigation Bar end-------------------------------->
-<br><br><br><br><br><br><br><h1>About us page</h1><br><br><br><br><br><br><br><h1></h1>
-
+  <header>
+    <h3>About Us</h2>
+</header>
+<section class="about-us">
+    <h2>Our Company</h2>
+    <p>We are a leading provider of stock management solutions, designed to help businesses streamline their inventory control, reduce costs, and increase efficiency. Our system integrates seamlessly with existing workflows and provides real-time analytics to make informed decisions.</p>
+</section>
+<section class="our-mission">
+    <h2>Our Mission</h2>
+    <p>Our mission is to deliver the most reliable and easy-to-use stock management system that supports businesses in managing their inventory effectively. We are committed to innovation and excellence, ensuring our clients receive the best possible service and support.</p>
+</section>
+<section class="our-team">
+    <h2>Meet Our Team</h2>
+    <div class="team-member">
+        <img src="img/ch.jpg" alt="CEO">
+        <h3>Jane Doe</h3><br><br><br><br>
+        <p>CEO & Founder</p>
+    </div>
+    <div class="team-member">
+        <img src="img/ceo.png" alt="CTO">
+        <h3>John Smith</h3>
+        <p>Chief Technology Officer</p>
+    </div>
+    <div class="team-member">
+        <img src="img/ceo.png" alt="CMO">
+        <h3>Alice Johnson</h3>
+        <p>Chief Marketing Officer</p>
+    </div>
+</section>
 
 
 
