--- a/src/my_orders.html
+++ b/src/my_orders.html
@@ -83,12 +83,12 @@
     <input type="text" class="Order-details" name="cname" placeholder="Enter E-mail"><br><br>
     
 
-    <label> Phone Number :</label>
-    <input type="text"  class="Order-details"  name="phonenumber"pattern="[0-9]{10}" placeholder="0000000000">
+    <label> Address :</label>
+    <input type="text"  class="Order-details"  name="address" placeholder="Enter address"> 
     <br><br>
 
-    <label>Address :</label>
-    <input type="text"  class="Order-details"   name="address"placeholder="Enter address">
+    <label>Phone Number :</label>
+    <input type="text"  class="Order-details"   name="phonenumber"pattern="[0-9]{10}" placeholder="0000000000"
     <br><br>
 
     <label> Postal Code :</label>
