--- a/src/my_orders.html
+++ b/src/my_orders.html
@@ -88,8 +88,8 @@
     <br><br>
 
     <label>Phone Number :</label>
-    <input type="text"  class="Order-details"   name="phonenumber"pattern="[0-9]{10}" placeholder="0000000000"
-    <br><br>
+    <input type="text"  class="Order-details"   name="phonenumber"pattern="[0-9]{10}" placeholder="0000000000">
+     <br><br>
 
     <label> Postal Code :</label>
     <input type="text"  class="Order-details"  name="postalcode" placeholder="Enter Postal Code"><Br><br>
